fixed spacing on classes page, added images to each class item

--- a/src/components/class-item.css
+++ b/src/components/class-item.css
@@ -1,12 +1,27 @@
 .classes__item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 25px;
+}
+
+.classes__item.hello_world {
+  width: 46%;
+}
+
+.classes__item__title {
+  font-size: 24px;
+  color: #050305;
+  font-weight: bold;
+}
+
+.class__image {
+  width: 50px;
 }
 
 .classes__item__description {
-    margin: 0;
-    width: 75%;
-    line-height: 1.5;
-    color: rgba(0, 0, 0, 0.57);
+  margin: 0;
+  line-height: 1.5;
+  color: rgba(0, 0, 0, 0.57);
+  text-align: center;
 }
