--- a/src/pages/classes.css
+++ b/src/pages/classes.css
@@ -7,11 +7,11 @@
 }
 
 .classes__content {
-    width: 100%;
+    width: 90%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .classes__title {
